--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "gulp"
   },
   "author": "Semion Chernov",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.13",
+    "browser-sync": "^2.27.7",
     "del": "^6.0.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
-    "gulp-uglify-es": "^2.0.0",
-    "jquery": "^3.5.1",
+    "gulp-uglify-es": "^3.0.0",
+    "jquery": "^3.6.0",
     "sass": "^1.49.7"
   }
 }
